[package]
name = "nteract-mcp"
version = "0.4.1"
edition.workspace = true
description = "nteract MCP server — resilient proxy in front of `runt mcp`. Ships as a sidecar in the nteract desktop app, inside the .mcpb Claude Desktop extension, and in the Claude Code plugin."
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "nteract-mcp"
path = "src/main.rs"

[dependencies]
runt-mcp-proxy = { path = "../runt-mcp-proxy" }
runt-workspace = { path = "../runt-workspace" }
rmcp = { workspace = true, features = ["transport-io"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }

[lints]
workspace = true
