[package]
name = "nteract-predicate"
version = "0.2.7"
edition = "2021"
description = "Pure-Rust compute kernels for dataframe/Arrow analysis (summary, filter, histogram)"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { workspace = true }
bytes = { workspace = true }
chrono = { version = "0.4", default-features = false }

# Arrow with compute kernels. `arrow` re-exports array/buffer/ord/string
# under its own module tree; those sub-crates are pulled in transitively
# and don't need direct entries. `arrow-cast` and `arrow-select` are
# imported directly (see `summary.rs`, `filter.rs`) and stay explicit.
arrow = { version = "54", default-features = false, features = ["ipc", "ffi"] }
arrow-cast = { version = "54", default-features = false }
arrow-select = { version = "54", default-features = false }

# Parquet reader
parquet = { version = "54", default-features = false, features = ["arrow", "snap", "flate2", "zstd"] }

[lints]
workspace = true
