[package]
name = "nteract-predicate"
version = "0.4.3"
edition = "2021"
description = "Pure-Rust compute kernels for dataframe/Arrow analysis (summary, filter, histogram)"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }

# Arrow with compute kernels. `arrow` re-exports array/buffer/ord/string
# under its own module tree; those sub-crates are pulled in transitively
# and don't need direct entries. `arrow-cast` and `arrow-select` are
# imported directly (see `summary.rs`, `filter.rs`) and stay explicit.
arrow = { workspace = true, features = ["ipc", "ffi"] }
arrow-cast = { workspace = true }
arrow-select = { workspace = true }

# Parquet reader
parquet = { workspace = true }

[lints]
workspace = true
