[package]
name = "nteract-telemetry"
version = "2.6.1"
edition.workspace = true
description = "Anonymous phone-home telemetry for nteract Rust binaries"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
runtimed-client = { path = "../runtimed-client" }
runtimed-settings-sync = { path = "../runtimed-settings-sync" }
runt-workspace = { path = "../runt-workspace" }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }
