[package]
name = "playdate-image"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
thiserror = { workspace = true }

[lints]
workspace = true
