[package]
name = "playdate-pdi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
tempfile = "3"
thiserror = { workspace = true }

[lints]
workspace = true
