[package]
name = "repr-llm"
version = "0.3.2"
edition.workspace = true
description = "LLM-friendly text summaries of structured visualization specs"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
serde_json = { workspace = true }
nteract-predicate = { path = "../nteract-predicate" }
