[package]
name = "runt-cloud-peer"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
publish = false

[[bin]]
name = "runt-cloud-peer"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notebook-wire = { path = "../notebook-wire" }
notebook-doc = { path = "../notebook-doc" }
runtime-doc = { path = "../runtime-doc" }
automerge = { workspace = true }
uuid = { version = "1", features = ["v4"] }
# Kernel hosting: drive a local Jupyter kernel directly over ZMQ (the daemon's
# JupyterKernel is welded to daemon-only shared state, so we reuse the protocol
# crates instead). See docs/adr/remote-workstation-doc-agents.md.
jupyter-protocol = { workspace = true }
jupyter-zmq-client = { workspace = true, features = ["tokio-runtime", "aws-lc-rs"] }
