[package]
name = "runt-mcp-proxy"
version = "0.2.5"
edition.workspace = true
description = "Resilient MCP proxy for runt mcp — child process supervision, restart-with-retry, session tracking, and version awareness"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
rmcp = { version = "1.4", features = ["server", "client", "transport-async-rw", "transport-io"] }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
