[package]
name = "runt-mcp-proxy"
version = "0.4.2"
edition.workspace = true
description = "Resilient MCP proxy for runt mcp — child process supervision, restart-with-retry, session tracking, and version awareness"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
rmcp = { workspace = true, features = ["server", "client", "transport-async-rw", "transport-io"] }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
