[package]
name = "runt-mcp"
version = "0.3.7"
edition.workspace = true
description = "Rust-native MCP server for nteract notebook interaction"
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
rmcp = { version = "1.4", features = ["server", "transport-io"] }
repr-llm = { path = "../repr-llm" }
runtimed-client = { path = "../runtimed-client" }
runtimed-outputs = { path = "../runtimed-outputs" }
notebook-protocol = { path = "../notebook-protocol" }
notebook-sync = { path = "../notebook-sync" }
notebook-doc = { path = "../notebook-doc" }
runtime-doc = { path = "../runtime-doc" }
runt-workspace = { path = "../runt-workspace" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
dirs = "6"
regex = "1"
fancy-regex = "0.14"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"

[dev-dependencies]
chrono = "0.4"
tempfile = "3"
