[package]
name = "runt-mcp"
version = "0.5.3"
edition.workspace = true
description = "Rust-native MCP server for nteract notebook interaction"
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
rmcp = { workspace = true, features = ["server", "transport-io"] }
reqwest = { workspace = true, features = ["json"] }
repr-llm = { path = "../repr-llm" }
runtimed-client = { path = "../runtimed-client" }
runtimed-outputs = { path = "../runtimed-outputs" }
notebook-protocol = { path = "../notebook-protocol" }
notebook-cloud-transport = { path = "../notebook-cloud-transport", features = ["registry"] }
notebook-sync = { path = "../notebook-sync" }
notebook-doc = { path = "../notebook-doc" }
runtime-doc = { path = "../runtime-doc" }
comments-doc = { path = "../comments-doc" }
mcp-client-branding = { path = "../mcp-client-branding" }
runt-workspace = { path = "../runt-workspace" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
fancy-regex = "0.14"
uuid = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
futures-util = { workspace = true }
tempfile = { workspace = true }
tokio-tungstenite = { workspace = true }
