[package]
name = "runt-publish"
version = "0.2.3"
edition.workspace = true
description = "Publisher library for hosted nteract notebook-cloud demos (CLI surface: `runt publish`)"
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
automerge = { workspace = true }
clap = { workspace = true, features = ["env"] }
hex = { workspace = true }
notebook-doc = { path = "../notebook-doc" }
notebook-sync = { path = "../notebook-sync" }
reqwest = { workspace = true, features = ["json"] }
runtimed-client = { path = "../runtimed-client" }
runtime-doc = { path = "../runtime-doc" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }
urlencoding = "2"
uuid = { workspace = true }
