[package]
name = "runt-trust"
version = "0.3.9"
edition.workspace = true
description = "Notebook trust extraction for the per-machine package allowlist"
repository.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
