[package]
name = "runt-trust"
version = "0.5.2"
edition.workspace = true
description = "Notebook trust extraction for the per-machine package allowlist"
repository.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
