[package]
name = "runt-workspace"
version = "0.3.6"
edition.workspace = true
description = "Workspace and dev mode utilities for Runt"
repository.workspace = true
license.workspace = true

[dependencies]
dirs = "6"
hex = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
