[package]
name = "runt-workspace"
version = "0.5.2"
edition.workspace = true
description = "Workspace and dev mode utilities for Runt"
repository.workspace = true
license.workspace = true

[dependencies]
dirs = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
