[package]
name = "runt-workspace"
version = "0.5.3"
edition.workspace = true
description = "Workspace and dev mode utilities for Runt"
repository.workspace = true
license.workspace = true

[dependencies]
dirs = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
