[package]
name = "runt"
version = "2.4.4"
edition.workspace = true
description = "CLI for Jupyter Runtimes — bundled with nteract"
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
jupyter-protocol = { workspace = true }
jupyter-zmq-client = { workspace = true, features = ["tokio-runtime", "aws-lc-rs"] }
runtimed-client = { path = "../runtimed-client" }
notebook-doc = { path = "../notebook-doc", features = ["persistence"] }
runt-workspace = { path = "../runt-workspace" }
runt-mcp = { path = "../runt-mcp" }
kernel-env = { path = "../kernel-env" }
rmcp = { version = "1.4", features = ["server", "transport-io"] }
clap = { version = "4.5.1", features = ["derive", "color"] }
colored = "3"
tokio = { version = "1", features = ["full"] }
petname = "2"
rpassword = "7"
dirs = "6"
tabled = "0.20"
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
flate2 = "1"
notify = "8"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
build-metadata = { path = "../build-metadata" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
