[package]
name = "runt"
version = "2.5.2"
edition.workspace = true
description = "CLI for Jupyter Runtimes — bundled with nteract"
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
runt-publish = { path = "../runt-publish" }
runtimed-client = { path = "../runtimed-client" }
runtimed-service = { path = "../runtimed-service" }
nteract-telemetry = { path = "../nteract-telemetry" }
notebook-doc = { path = "../notebook-doc", features = ["persistence"] }
runt-workspace = { path = "../runt-workspace" }
runt-mcp = { path = "../runt-mcp" }
kernel-env = { path = "../kernel-env" }
rmcp = { version = "1.4", features = ["server", "transport-io"] }
clap = { version = "4.5.1", features = ["derive", "color"] }
colored = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
tokio = { version = "1", features = ["full"] }
petname = "2"
dirs = "6"
tabled = "0.20"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
flate2 = "1"
notify = "8"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
build-metadata = { path = "../build-metadata" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
