[package]
name = "runt"
version = "2.6.2"
edition.workspace = true
description = "CLI for Jupyter Runtimes — bundled with nteract"
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
runt-publish = { path = "../runt-publish" }
runtimed-client = { path = "../runtimed-client" }
runtimed-service = { path = "../runtimed-service" }
nteract-telemetry = { path = "../nteract-telemetry" }
notebook-doc = { path = "../notebook-doc", features = ["persistence"] }
notebook-sync = { path = "../notebook-sync" }
runt-workspace = { path = "../runt-workspace" }
runt-mcp = { path = "../runt-mcp" }
kernel-env = { path = "../kernel-env" }
rmcp = { workspace = true, features = ["server", "transport-io"] }
clap = { workspace = true, features = ["color"] }
colored = "3"
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["full"] }
dirs = { workspace = true }
tabled = "0.20"
chrono = { workspace = true, features = ["std", "clock"] }
flate2 = { workspace = true }
notify = { workspace = true }
tar = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = "2"

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
build-metadata = { path = "../build-metadata" }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
