[package]
name = "runtime-doc"
version = "0.3.1"
edition.workspace = true
description = "RuntimeStateDoc and RuntimeStateHandle — per-notebook Automerge document for daemon-authoritative runtime state"
repository.workspace = true
license.workspace = true

[dependencies]
automerge = { workspace = true }
automerge-recovery = { path = "../automerge-recovery" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
automunge = { path = "../automunge" }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
thiserror = { workspace = true }
