[package]
name = "runtime-doc"
version = "0.4.3"
edition.workspace = true
description = "RuntimeStateDoc and RuntimeStateHandle — per-notebook Automerge document for runtime-authoritative state"
repository.workspace = true
license.workspace = true

[dependencies]
automerge = { workspace = true }
automerge-recovery = { path = "../automerge-recovery" }
serde = { workspace = true }
serde_json = { workspace = true }
automunge = { path = "../automunge" }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
thiserror = { workspace = true }
