[package]
name = "runtime-projection"
version = "0.1.0"
edition.workspace = true
description = "Shared RuntimeStateDoc projection helpers"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
runtime-doc = { path = "../runtime-doc" }
serde = { workspace = true }
